--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
+            <a class="nav-link js-scroll-trigger" href="eva.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="message.html">The Message</a>
@@ -59,7 +59,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div style="background-image:url(img/GloBal-Warming.jpg)">
+        <div style="background-image:url(img/global.jpg)">
         <div class="intro-lead-in">WELCOME TO OUR PROGRAM</div>
         <div class="intro-heading text-uppercase">Global Warming And The Challenges That Changes The Way We Live </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
