--- a/message.html
+++ b/message.html
@@ -28,11 +28,12 @@ you<!DOCTYPE html>
 
 <body id="page-top">
 
+  
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">By: Miranda Salas</a>
-           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">By Vanessa </a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -42,7 +43,7 @@ you<!DOCTYPE html>
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
+            <a class="nav-link js-scroll-trigger" href="eva.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="message.html">The Message</a>
@@ -54,6 +55,7 @@ you<!DOCTYPE html>
       </div>
     </div>
   </nav>
+
   <!-- Header -->
   <header class="masthead">
     <div style="background-image:url(img/save.jpg)">
@@ -165,7 +167,7 @@ you<!DOCTYPE html>
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/Dying.jpg" alt="">
+            <img class="img-fluid" src="img/death.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Dying</h4>
@@ -297,7 +299,7 @@ you<!DOCTYPE html>
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/eva.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/bun.jpg" alt="">
             <h4>Eva </h4>
             <p class="text-muted">Cinnamon Roll</p>
             <ul class="list-inline social-buttons">
