--- a/cool.html
+++ b/cool.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">By Vanessa </a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">By Eva </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -42,8 +42,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="eva.html">About</a>
+             <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="cool.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="message.html">The Message</a>
@@ -55,6 +55,7 @@
       </div>
     </div>
   </nav>
+
 
   <!-- Header -->
   <header class="masthead">
