--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="eva.html">About</a>
+             <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="cool.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="message.html">The Message</a>
